--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -8,7 +8,24 @@
   </head>
   <body>
     <main>
-      <!-- Add your code here -->
+      <figure>
+        <img
+          src="http://placekitten.com/200/150"
+          alt="small kitten"
+          width="200"
+          height="150"
+        />
+        <figcaption>Cute Kittens!</figcaption>
+      </figure>
+      <figure>
+        <img
+          src="http://place-puppy.com/200x150"
+          alt="small dog"
+          width="200"
+          height="150"
+        />
+        <figcaption>Cute puppies!!</figcaption>
+      </figure>
     </main>
   </body>
 </html>
