--- a/01-html/03-table.html
+++ b/01-html/03-table.html
@@ -17,7 +17,37 @@
   <body>
     <main>
       <table>
-        <!-- Add your code here -->
+        <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>SpongeBob</td>
+            <td>Spquarepants</td>
+            <td>spongebob@spongebob.world</td>
+          </tr>
+          <tr>
+            <td>Patrick</td>
+            <td>star</td>
+            <td>patrick@spongebob.world</td>
+          </tr>
+          <tr>
+            <td>Sandy</td>
+            <td>Cheeks</td>
+            <td>sandy@spongebob.world</td>
+          </tr>
+          <tr>
+            <td colspan="2" rowspan="2">Mr.krabs</td>
+            <td>mrk@spongebob.world</td>
+          </tr>
+          <tr>
+            <td>mrkrabs@spongebob.world</td>
+          </tr>
+        </tbody>
       </table>
     </main>
   </body>
