--- a/01-html/04-form.html
+++ b/01-html/04-form.html
@@ -9,7 +9,68 @@
   <body>
     <main>
       <form action="/submit">
-        <!-- Add your code here -->
+        <h1>Form</h1>
+        <div>
+          <label for="name"></label>
+          <input type="text" id="name" name="name" placeholder="Full name" />
+        </div>
+        <div>
+          <label for="email">Email:</label>
+          <input type="email" id="email" placeholder="name@pdx.edu" />
+        </div>
+        <br />
+
+        <fieldset>
+          <legend>Favorite Character</legend>
+          <div>
+            <input
+              type="radio"
+              id="spongebob"
+              name="character"
+              value="spongebob/"
+            />
+            <label for="spongebob">spongebob</label>
+          </div>
+
+          <div>
+            <input
+              type="radio"
+              id="sandy"
+              name="character"
+              value="spongebob/"
+            />
+            <label for="sandy">sandy</label>
+          </div>
+
+          <div>
+            <input
+              type="radio"
+              id="patrick"
+              name="character"
+              value="spongebob/"
+            />
+            <label for="patrick">patrick</label>
+          </div>
+        </fieldset>
+        <br />
+
+        <fieldset>
+          <div>
+            <input type="checkbox" id="option1" name="episodes" value="yes" />
+            <label for="option1">Yes, I watched</label>
+          </div>
+
+          <div>
+            <input type="checkbox" id="option2" name="episodes" value="yes" />
+            <label for="option2">No, I don't like at All!!</label>
+          </div>
+        </fieldset>
+        <br />
+
+        <div>
+          <input type="submit" value="Submit" />
+          <input type="reset" value="Reset" />
+        </div>
       </form>
     </main>
   </body>
