--- a/02-a11y/01-form.html
+++ b/02-a11y/01-form.html
@@ -3,26 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>01 - Form</title>
-    <link rel="stylesheet" href="../_styles/styles.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>01- Form</title>
+    <style>
+      form > * {
+        margin: 1em 0;
+      }
+      fieldset {
+        border: 0;
+        padding: 0;
+        margin-top: 1em;
+      }
+      div > label,
+      legend {
+        font-weight: 800;
+      }
+    </style>
   </head>
   <body>
-    <h1>01 - Form</h1>
-    <form action="/submit">
-      <span>Name</span>
-      <input type="text" />
-      <br /><br />
-      <label>
-        Email
-        <input type="text" />
-      </label>
-      <br /><br />
-      <span>Favorite Character</span>
-      <div><input type="radio" id="spongebob" />Spongebob</div>
-      <div><input type="radio" id="patrick" />Patrick</div>
-      <div><input type="radio" id="sandy" />Sandy</div>
-      <br />
-      <button>Submit</button>
-    </form>
+    <main>
+      <form action="/submit">
+        <h1>Form</h1>
+        <div>
+          <label for="name"></label>
+          <input type="text" id="name" name="name" placeholder="Full name" />
+        </div>
+        <div>
+          <label for="email">Email:</label>
+          <input type="email" id="email" placeholder="name@pdx.edu" />
+        </div>
+        <br />
+
+        <fieldset>
+          <legend>Favorite Character</legend>
+          <div>
+            <input
+              type="radio"
+              id="spongebob"
+              name="character"
+              value="spongebob/"
+            />
+            <label for="spongebob">spongebob</label>
+          </div>
+
+          <div>
+            <input
+              type="radio"
+              id="sandy"
+              name="character"
+              value="spongebob/"
+            />
+            <label for="sandy">sandy</label>
+          </div>
+
+          <div>
+            <input
+              type="radio"
+              id="patrick"
+              name="character"
+              value="spongebob/"
+            />
+            <label for="patrick">patrick</label>
+          </div>
+        </fieldset>
+        <br />
+
+        <fieldset>
+          <div>
+            <input type="checkbox" id="option1" name="episodes" value="yes" />
+            <label for="option1">Yes, I watched</label>
+          </div>
+
+          <div>
+            <input type="checkbox" id="option2" name="episodes" value="yes" />
+            <label for="option2">No, I don't like at All!!</label>
+          </div>
+        </fieldset>
+        <br />
+
+        <div>
+          <input type="submit" value="Submit" />
+          <input type="reset" value="Reset" />
+        </div>
+      </form>
+    </main>
   </body>
 </html>
