--- a/06-bootstrap/04-modal.html
+++ b/06-bootstrap/04-modal.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercise 04 - Modals</title>
+    <title>Exercise 03 - Bootstrap Grid</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../_styles/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../../_styles/styles.css" />
+    <link rel="stylesheet" href="../exercises/styles.css" />
   </head>
   <body>
-    <h1>04 - Bootstrap Modal</h1>
-    <!-- Add your code here -->
+    <main class="container mt-4">
+      <h1>Exercise 03 - Bootstrap Grid</h1>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">One</div>
+        <div class="col-sm-12 col-md-6">Two</div>
+      </div>
+      <div class="row">
+        <div class="col-8">Three</div>
+        <div class="col-4">Four</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 col-lg-8">Five</div>
+        <div class="col-sm-6 col-md-4 col-lg-2">Six</div>
+        <div class="col-sm-12 col-md-4 col-lg-2">Seven</div>
+      </div>
+    </main>
   </body>
 </html>
+
